--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -118,7 +118,7 @@
     </div>
 </div>
 <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2024 RecipeShare. All Rights Reserved.</p>
+    <p>&copy; 2024 InstaRecipe. All Rights Reserved.</p>
 </footer>
 </body>
 </html>
