--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,58 +1,62 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" class="h-100">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.84.0">
     <title>InstaRecipe</title>
     <link href="/css/reset-css.css" rel="stylesheet"/>
     <link href="/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="/css/styles.css" rel="stylesheet"/>
 </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">RecipeShare</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Recipes</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link btn btn-primary text-white" href="#">Login</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
-            </ul>
+<body class="d-flex flex-column h-100">
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">RecipeShare</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Recipes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link btn btn-primary text-white" href="#">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
-<main class="main-content">
-    <div class="jumbotron">
-        <div class="container text-dark text-center">
-            <h1><strong class="bg-blur rounded">Welcome to InstaRecipe</strong></h1>
-        </div>
-        <div class="container bg-blur text-dark rounded mt-5 p-5">
-            <div class="row">
-                <div>
-                    <div class="row justify-content-center align-items-center mb-4">
-                        <img width="80px" src="/images/dish.png" alt="Recipe icon">
-                        <h2 class="ms-3">Start Sharing!</h2>
-                    </div>
-                    <p class="mt-3">Join our vibrant community of food enthusiasts. Share your favorite recipes, explore
-                        dishes from around the world, and connect with others who love cooking as much as you do. 🧇🥓🥪</p>
-                    <div class="btn-container">
-                        <a href="/login" class="btn btn-primary btn-lg">Login</a>
-                        <a href="/register" class="btn btn-secondary btn-lg">Register</a>
-                    </div>
-                </div>
+    </nav>
+</header>
+
+<!-- Begin page content -->
+<main class="flex-shrink-0">
+    <div class="mb-4 bg-light rounded-3 position-absolute top-50 start-50 translate-middle">
+        <div class="container-fluid py-5 text-center">
+            <div class=" justify-content-center align-items-center mb-4">
+                <img width="80px" src="/images/dish.png" alt="Recipe icon">
+                <h2 class="ms-3 d-inline">Start Sharing!</h2>
+            </div>
+            <p class="mt-3">Join our vibrant community of food enthusiasts. Share your favorite recipes, explore
+                dishes from around the world, and connect with others who love cooking as much as you do. 🧇🥓🥪</p>
+            <div class="btn-container pt-3">
+                <a href="/login" class="btn btn-primary btn-lg">Login</a>
+                <a href="/register" class="btn btn-secondary btn-lg">Register</a>
             </div>
         </div>
     </div>
 </main>
-<footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2024 RecipeShare. All Rights Reserved.</p>
+
+<footer class="bg-dark footer mt-auto py-3 bg-light">
+    <div class="container text-center">
+        <span class="text-white">&copy; 2024 RecipeShare. All Rights Reserved.</span>
+    </div>
 </footer>
+
 </body>
 </html>
