add login and register views

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,33 +1,9 @@
 <!DOCTYPE html>
-<html class="h-100" lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InstaRecipe</title>
-    <link href="/css/reset-css.css" rel="stylesheet"/>
-    <link href="/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="/css/styles.css" rel="stylesheet"/>
-</head>
+<html class="h-100" lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/commons::head}"></head>
 <body class="d-flex flex-column h-100">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">InstaRecipe</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Recipes</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
-                <li class="nav-item"><a class="btn btn-primary" href="/login">Login</a></li>
-                <li class="nav-item"><a class="btn btn-secondary ms-2" href="/register">Register</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
+<header th:replace="~{fragments/commons::nav}"></header>
 <main class="flex-shrink-0">
     <div class="hero">
         <h1>Welcome to InstaRecipe</h1>
@@ -35,7 +11,6 @@
         <a href="/register" class="btn btn-primary btn-lg mr-2">Get Started</a>
         <a href="/login" class="btn btn-secondary btn-lg">Login</a>
     </div>
-
     <div class="container my-5">
         <div class="row text-center">
             <div class="col-md-4 d-flex">
@@ -73,10 +48,6 @@
         </div>
     </div>
 </main>
-
-
-<footer class="footer mt-auto bg-dark text-white text-center py-3">
-    <p>&copy; 2024 InstaRecipe. All Rights Reserved.</p>
-</footer>
+<footer th:replace="~{fragments/commons::footer}"></footer>
 </body>
 </html>
