--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,4 +1,4 @@
-.hero {
+.hero, .home {
     background: url('/images/background.jpg') center center/cover no-repeat;
     color: black;
     padding: 100px 20px;
@@ -6,13 +6,13 @@
 }
 
 .hero h1 {
-    font-size: 3.5rem; /* Large, eye-catching title */
-    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.7); /* Adds depth */
+    font-size: 3.5rem;
+    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
     margin-bottom: 20px;
 }
 
 .hero p {
-    font-size: 1.5rem; /* Slightly smaller subheading */
+    font-size: 1.5rem;
     margin-bottom: 30px;
     text-shadow: 0 1px 5px rgba(0, 0, 0, 0.6);
 }
@@ -39,7 +39,7 @@
 }
 
 .feature-card {
-    background: linear-gradient(135deg, rgba(255, 175, 75, 0.9), rgba(255, 87, 34, 0.9)); /* Orange gradient */
+    background: linear-gradient(135deg, rgba(255, 175, 75, 0.9), rgba(255, 87, 34, 0.9));
     border-radius: 15px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow */
     overflow: hidden;
@@ -49,4 +49,38 @@
     transform: translateY(-5px); /* Slight lift effect on hover */
     transition: transform 0.3s ease;
 }
+/*-------------------------------* home styles*/
+.fixed-image {
+    height: 200px; /* Set a uniform height */
+    object-fit: cover; /* Crop and scale the image proportionally */
+    width: 100%; /* Ensure the image takes up the full width of its container */
+}
+
+.view-recipe-btn {
+    border-color: rgba(255, 175, 75, 0.9);
+    color: rgba(255, 87, 34, 0.9);
+    transition: all 0.3s ease-in-out;
+}
+
+.view-recipe-btn:hover {
+    background: linear-gradient(135deg, rgba(255, 175, 75, 0.9), rgba(255, 87, 34, 0.9));
+    color: #fff; /* Change text color to white for contrast */
+    border-color: transparent; /* Hide the border on hover */
+}
+
+/*------------------------------* login styles*/
+.login, .register{
+    background: url('/images/background.jpg') center center/cover no-repeat;
+}
+
+.login-btn, .register-btn {
+    background: linear-gradient(135deg, rgba(255, 175, 75, 0.9), rgba(255, 87, 34, 0.9)); border: none;
+}
+
+.dark-background {
+    background: rgba(0, 0, 0, 0.6);
+}
+
+
+
 
