--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,7 +5,7 @@
 <body class="register d-flex flex-column h-100">
 <header th:replace="~{fragments/commons::nav}"></header>
 <main class="flex-shrink-0">
-    <div class="position-relative min-vh-100" style="background: url('/images/background.jpg') center/cover no-repeat;">
+    <div class="position-relative min-vh-100">
         <div class="dark-background position-absolute top-0 start-0 w-100 h-100"></div>
         <div class="d-flex justify-content-center align-items-center min-vh-100">
             <!-- Register card -->
