--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/commons::head}"></head>
 <body class="d-flex flex-column h-100">
-<header th:replace="~{fragments/commons::nav}"></header>
+<header th:replace="~{fragments/commons::header}"></header>
 <div class="home container-fluid bg-light py-5 text-center">
     <h1 class="display-4">Discover, Share, and Create Amazing Recipes!</h1>
     <p class="lead">Join our community of food lovers and explore thousands of delicious recipes.</p>
