--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/commons::head}"></head>
 <body class="login d-flex flex-column h-100">
-<header th:replace="~{fragments/commons::nav}"></header>
+<header th:replace="~{fragments/commons::header}"></header>
 <main class="flex-shrink-0">
     <div class="dark-background d-flex justify-content-center align-items-center min-vh-100">
         <div class="card shadow-lg text-center p-4"
