--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -2,7 +2,7 @@
 <html class="h-100" lang="en">
 <head th:replace="~{fragments/commons::head}"></head>
 <body class="d-flex flex-column h-100">
-<header th:replace="~{fragments/commons::nav}"></header>
+<header th:replace="~{fragments/commons::header}"></header>
 
 <main class=" flex-shrink-0">
     <section class="recipes">
