--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/commons::head}"></head>
 <body class="register d-flex flex-column h-100">
-<header th:replace="~{fragments/commons::nav}"></header>
+<header th:replace="~{fragments/commons::header}"></header>
 <main class="flex-shrink-0">
     <div class="position-relative min-vh-100">
         <div class="dark-background position-absolute top-0 start-0 w-100 h-100"></div>
