add edit recipe button

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -186,8 +186,10 @@
 
 .card.recipe-card .btn-like {
     background: linear-gradient(135deg, rgba(255, 175, 75, 0.9), rgba(255, 87, 34, 0.9));
-    color: white;
     border: none;
+    font-size: 1.2rem;
+    padding: 10px 25px;
+    border-radius: 50px;
 }
 
 .card.recipe-card .btn-like:hover {
@@ -225,13 +227,14 @@
     color: #aaa;
 }
 
-/* Buttons */
+ /*Buttons */
 .btn-add-comment {
     background: linear-gradient(135deg, rgba(255, 175, 75, 0.9), rgba(255, 87, 34, 0.9));
     border: none;
-    color: white;
-    font-weight: bold;
-    max-width: 20%;
+    font-size: 1.2rem;
+    padding: 10px 25px;
+    border-radius: 50px;
+    max-width: 30%;
 }
 
 .btn-add-comment:hover {
