--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -107,7 +107,7 @@
 
 /*-----------------------add recipe style*/
 
-.add-recipe-section {
+.add-recipe-section, .edit-recipe-section {
     background: url('/images/background.jpg') no-repeat center center/cover;
     min-height: 100vh;
     display: flex;
@@ -117,7 +117,7 @@
     position: relative;
 }
 
-.add-recipe-section::before {
+.add-recipe-section::before,.edit-recipe-section::before {
     content: '';
     position: absolute;
     top: 0;
@@ -128,13 +128,13 @@
     z-index: 1;
 }
 
-.add-recipe-section .container {
+.add-recipe-section .container,.edit-recipe-section .container {
     z-index: 2;
     position: relative;
     color: white;
 }
 
-.add-recipe-section .card {
+.add-recipe-section .card,.edit-recipe-section .card {
     background: rgba(255, 255, 255, 0.9);
     border-radius: 0.75rem;
     overflow: hidden;
