--- a/src/main/resources/templates/recipe-details.html
+++ b/src/main/resources/templates/recipe-details.html
@@ -12,7 +12,7 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h1 class="card-title mb-0">Spaghetti Carbonara</h1>
-                    <a href="/edit-recipe" class="btn-recipes btn btn-primary">Edit Recipe</a>
+                    <a th:href="@{/recipe/edit}" class="btn-recipes btn btn-primary">Edit Recipe</a>
                 </div>
                 <p class="card-text text-muted text-center">Published on: <strong>Dec 28, 2024</strong></p>
                 <p class="card-text mb-4">A creamy and delicious Italian classic, made with eggs, cheese, pancetta, and black pepper. Quick and easy to make, it's the perfect meal for any time!</p>
