--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -23,6 +23,7 @@
                     <li class="nav-item"><a class="nav-link" th:href="@{/home}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/recipe/add}">Add Recipe</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/recipe/my-recipes}">My Recipes</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link btn btn-primary text-white" th:href="@{/users/login}">Login</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/users/register}">Register</a></li>
