--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -21,9 +21,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" th:href="@{/home}">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/users/profile}">My Profile</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/recipe/add}">Add Recipe</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/recipe/my-recipes}">My Recipes</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/recipes/add}">Add Recipe</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/recipes/my-recipes}">My Recipes</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link btn btn-primary text-white" th:href="@{/users/login}">Login</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/users/register}">Register</a></li>
