--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,7 +18,7 @@
                     <img src="/images/vegan.jpg" class="card-img-top img-fluid fixed-image" alt="Category Image">
                     <div class="card-body d-flex flex-column text-center">
                         <h5 class="card-title">Vegan</h5>
-                        <a href="#" class="btn btn-outline-primary view-recipe-btn mt-3">View Recipes</a>
+<!--                        <a th:href="@{'/categories/' + ${category.name}}" class="btn btn-outline-primary view-recipe-btn mt-3">View Recipes</a>-->
                     </div>
                 </div>
             </div>
@@ -27,7 +27,7 @@
                     <img src="/images/desserts.jpg" class="card-img-top img-fluid fixed-image" alt="Category Image">
                     <div class="card-body d-flex flex-column text-center">
                         <h5 class="card-title">Desserts</h5>
-                        <a href="#" class="btn btn-outline-primary view-recipe-btn mt-3">View Recipes</a>
+<!--                        <a th:href="@{'/categories/' + ${category.name}}" class="btn btn-outline-primary view-recipe-btn mt-3">View Recipes</a>-->
                     </div>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                     <img src="/images/main-course.jpg" class="card-img-top img-fluid fixed-image" alt="Category Image">
                     <div class="card-body d-flex flex-column text-center">
                         <h5 class="card-title">Main Course</h5>
-                        <a href="#" class="btn btn-outline-primary view-recipe-btn mt-3">View Recipes</a>
+<!--                        <a th:href="@{'/categories/' + ${category.name}}" class="btn btn-outline-primary view-recipe-btn mt-3">View Recipes</a>-->
                     </div>
                 </div>
             </div>
