--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/recipes/add}">Add Recipe</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/recipes/my-recipes}">My Recipes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/about}">About</a></li>
                     <li class="nav-item"><a class="nav-link btn btn-primary text-white" th:href="@{/users/login}">Login</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/users/register}">Register</a></li>
                 </ul>
