--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,8 +8,10 @@
     <div class="hero">
         <h1>Welcome to InstaRecipe</h1>
         <p>Discover, share, and connect with food lovers around the world.</p>
-        <a href="/register" class="btn btn-primary btn-lg mr-2">Get Started</a>
-        <a href="/login" class="btn btn-secondary btn-lg">Login</a>
+        <div class="d-flex justify-content-center gap-md-5 mt-4">
+            <a th:href="@{/users/login}" class="btn btn-primary btn-lg px-4 py-2 flex-grow-1 text-center" style="max-width: 200px;">Login</a>
+            <a th:href="@{/users/register}" class="btn btn-primary btn-lg px-4 py-2 flex-grow-1 text-center" style="max-width: 200px;">Register</a>
+        </div>
     </div>
     <div class="container my-5">
         <div class="row text-center">
