--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -56,7 +56,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Recipe Name</h5>
                             <p class="card-text">Quick description of the recipe.</p>
-                            <a href="#" class="btn btn-outline-primary view-recipe-btn mt-3">View Recipe</a>
+                            <a href="#" class="btn-recipes btn btn-outline-primary">View Recipe</a>
                         </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Recipe Name</h5>
                             <p class="card-text">Quick description of the recipe.</p>
-                            <a href="#" class="btn btn-outline-primary view-recipe-btn mt-3">View Recipe</a>
+                            <a href="#" class="btn-recipes btn btn-outline-primary">View Recipe</a>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Recipe Name</h5>
                             <p class="card-text">Quick description of the recipe.</p>
-                            <a href="#" class="btn btn-outline-primary view-recipe-btn mt-3">View Recipe</a>
+                            <a href="#" class="btn-recipes btn btn-outline-primary">View Recipe</a>
                         </div>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Recipe Name</h5>
                             <p class="card-text">Quick description of the recipe.</p>
-                            <a href="#" class="btn btn-outline-primary view-recipe-btn mt-3">View Recipe</a>
+                            <a href="#" class="btn-recipes btn btn-outline-primary">View Recipe</a>
                         </div>
                     </div>
                 </div>
