--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/commons::head}"></head>
 <body class="d-flex flex-column h-100">
-<header th:replace="~{fragments/commons::nav}"></header>
+<header th:replace="~{fragments/commons::header}"></header>
 <main class="flex-shrink-0">
     <div class="hero">
         <h1>Welcome to InstaRecipe</h1>
