--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -13,7 +13,8 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light p-lg-3 shadow">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold" th:href="@{/}">RecipeShare</a>
+            <a class="navbar-brand fw-bold" th:href="@{/}">
+                <img src="/images/logo.webp" alt="InstaRecipe Logo" style="height: 80px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
