--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,8 +19,8 @@
                 </div>
                 <form>
                     <div class="mb-3">
-                        <label for="name" class="form-label text-dark">Full Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter your full name" required>
+                        <label for="username" class="form-label text-dark">Username</label>
+                        <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label text-dark">Email Address</label>
